syntax = "proto3";

import "google/protobuf/descriptor.proto";

option go_package = "github.com/waj334/goblinc";

extend  google.protobuf.FileOptions {
  optional SystemOptions system_options = 50000;
}

extend google.protobuf.FieldOptions {
  optional FieldOptions field_options = 50001;
}

enum SizeofWord {
  WORD_8  = 0;
  WORD_16 = 1;
  WORD_32 = 2;
  WORD_64 = 3;
}

enum BitSize {
  SZ_8BIT  = 0;
  SZ_16BIT = 1;
}

enum Endianness {
  LITTLE_ENDIAN = 0;
  BIG_ENDIAN    = 1;
}

message SystemOptions {
    SizeofWord sizeof_word      = 1;
    Endianness HostEndianness   = 2;
    Endianness TargetEndianness = 3;
}

message FieldOptions {
  optional BitSize bits  = 1;
  optional uint64 length = 2;
}